<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/welcome_dialog_bg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
  <com.truethat.android.view.custom.StyledTextView
      android:id="@+id/welcomeDialog_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/welcome_dialog_title"
      android:textAlignment="center"
      android:textColor="@color/primary"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/welcomeDialog_message"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="spread"
      />

  <com.truethat.android.view.custom.StyledTextView
      android:id="@+id/welcomeDialog_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/welcome_dialog_message"
      android:textAlignment="center"
      android:textColor="@color/secondary"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/welcomeDialog_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/welcomeDialog_title"
      />

  <com.truethat.android.view.custom.StyledButton
      android:id="@+id/welcomeDialog_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcome_dialog_button"
      android:textAlignment="center"
      android:textColor="@color/light"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/welcomeDialog_message"
      />

</android.support.constraint.ConstraintLayout>