<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.OnBoardingActivity"
    >

  <fragment
      android:id="@+id/cameraFragment"
      android:name="com.truethat.android.ui.common.camera.CameraFragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:show_preview="false"
      tools:layout="@layout/fragment_camera"
      />

  <ImageView
      android:id="@+id/onBoardingImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/image_content_description"
      android:scaleType="centerCrop"
      android:tint="@color/tint"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/tigress_hug"
      />

  <TextView
      android:id="@+id/newAccountText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:labelFor="@+id/nameEditText"
      android:shadowColor="@color/shadow"
      android:shadowDx="1"
      android:shadowDy="1"
      android:shadowRadius="4"
      android:text="@string/create_your_account"
      android:textAlignment="center"
      android:textColor="@color/primary"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.1"
      />

  <TextView
      android:id="@+id/nameText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:labelFor="@+id/nameEditText"
      android:shadowColor="@color/shadow"
      android:shadowDx="1"
      android:shadowDy="1"
      android:shadowRadius="4"
      android:text="@string/whats_your_name"
      android:textAlignment="center"
      android:textColor="@color/light"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.4"
      />

  <EditText
      android:id="@+id/nameEditText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/hint"
      android:ems="10"
      android:hint="@string/john_doe"
      android:imeOptions="actionDone"
      android:inputType="textPersonName"
      android:textColor="@color/light"
      android:textColorHint="@color/hint"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/nameText"
      app:layout_constraintVertical_bias="0"
      />

  <TextView
      android:id="@+id/smileText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="50dp"
      android:paddingStart="50dp"
      android:shadowColor="@color/shadow"
      android:shadowDx="1"
      android:shadowDy="1"
      android:shadowRadius="4"
      android:text="@string/smile_to_continue"
      android:textAlignment="center"
      android:textColor="@color/light"
      android:textSize="30sp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.8"
      />

  <TextView
      android:id="@+id/realLifeText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:shadowColor="@color/shadow"
      android:shadowDx="1"
      android:shadowDy="1"
      android:shadowRadius="2"
      android:text="@string/real_life_smile"
      android:textAlignment="center"
      android:textColor="@color/light"
      android:textSize="16sp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/smileText"
      app:layout_constraintVertical_bias="0.1"
      />

</android.support.constraint.ConstraintLayout>
