<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <import type="android.view.View"/>
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.OnBoardingCheeseStageViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".view.fragment.OnBoardingCheeseStageFragment"
      >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/onBoarding_cheeseLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
      <com.truethat.android.view.custom.StyledTextView
          android:id="@+id/onBoarding_say_cheese_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/say_cheese"
          android:textAlignment="center"
          android:textColor="@color/primary"
          android:textSize="48sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.1"
          />

      <ImageView
          android:id="@+id/onBoarding_leftEmoji"
          android:layout_width="120dp"
          android:layout_height="120dp"
          android:alpha="0"
          android:contentDescription="@string/image_content_description"
          android:rotation="-20"
          android:scaleX="0.5"
          android:scaleY="0.5"
          android:src="@drawable/emoji_happy"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.2"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.4"
          />

      <ImageView
          android:id="@+id/onBoarding_middleEmoji"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:alpha="0"
          android:contentDescription="@string/image_content_description"
          android:rotation="10"
          android:scaleX="0.5"
          android:scaleY="0.5"
          android:src="@drawable/emoji_happy"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.9"
          />

      <ImageView
          android:id="@+id/onBoarding_rightEmoji"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:alpha="0"
          android:contentDescription="@string/image_content_description"
          android:rotation="40"
          android:scaleX="0.5"
          android:scaleY="0.5"
          android:src="@drawable/emoji_happy"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.8"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.6"
          />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/onBoarding_lostFaceLayout"
        android:layout_width="256dp"
        android:layout_height="match_parent"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        >
      <com.truethat.android.view.custom.StyledTextView
          android:id="@+id/onBoarding_lostFaceText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="120dp"
          android:text="@string/lost_face"
          android:textAlignment="center"
          android:textColor="@color/error"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/onBoarding_blindEmoji"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <ImageView
          android:id="@+id/onBoarding_blindEmoji"
          android:layout_width="240dp"
          android:layout_height="240dp"
          android:alpha="0"
          android:contentDescription="@string/image_content_description"
          android:scaleX="0.5"
          android:scaleY="0.5"
          android:src="@drawable/emoji_blind"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/onBoarding_lostFaceText"
          />
    </android.support.constraint.ConstraintLayout>

  </android.support.constraint.ConstraintLayout>
</layout>